--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             background: url('https://img.freepik.com/fotos-gratis/representacao-da-experiencia-do-usuario-e-design-de-interface-em-smartphone_23-2150165976.jpg') no-repeat center center/cover;
             height: 100vh;
-            color: white;
+            color: #FF6B00; /* Cor do texto laranja */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -33,6 +33,8 @@
             margin-bottom: 30px;
             border-radius: 10px;
             background-color: rgba(255, 255, 255, 0.2);
+            position: relative;
+            top: 20px;
         }
         .progress-bar {
             background-color: #FF6B00;
@@ -54,7 +56,7 @@
         <h1>Bem-vindo ao UrbanGo!</h1>
         <p>Seu app de mobilidade urbana inteligente.</p>
 
-        <!-- Barra de carregamento -->
+        <!-- Barra de carregamento centralizada -->
         <div class="progress">
             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" id="progressBar"></div>
         </div>
