--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #f4f4f9;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,9 +15,9 @@
         }
         .form-container {
             background: white;
-            padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+            padding: 40px;
+            border-radius: 20px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
         }
         .form-container h2 {
             text-align: center;
@@ -34,6 +34,19 @@
         .form-container .form-control {
             border-radius: 10px;
         }
+        .form-container p {
+            color: #666;
+        }
+        .form-container a {
+            color: #FF6B00;
+        }
+        .logo-container {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .logo-container img {
+            width: 150px; /* Tamanho da logo */
+        }
     </style>
 </head>
 <body>
@@ -41,6 +54,10 @@
         <div class="row justify-content-center">
             <div class="col-lg-5 col-md-7 col-sm-10">
                 <div class="form-container">
+                    <!-- Logo centralizada -->
+                    <div class="logo-container">
+                        <img src="https://img.freepik.com/vetores-gratis/logotipo-do-conceito-de-transporte_23-2147507984.jpg" alt="Logo">
+                    </div>
                     <h2>Cadastrar-se</h2>
                     <form>
                         <div class="mb-3">
