--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
             width: 100%;
             max-width: 300px;
             height: 20px;
+            margin: 0 auto; /* Centraliza a barra */
             margin-bottom: 30px;
             border-radius: 10px;
             background-color: rgba(255, 255, 255, 0.2);
-            position: relative;
-            top: 20px;
         }
         .progress-bar {
             background-color: #FF6B00;
