--- a/usuario.html
+++ b/usuario.html
@@ -122,7 +122,7 @@
     }
 </script>
 <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcLcrlxZWCq5zNDyRMlsTndPHT7lNNwJA&callback=initMap">
 </script>
 
 </body>
