--- a/cadastro.html
+++ b/cadastro.html
@@ -77,7 +77,7 @@
                             <input type="password" class="form-control" id="confirmPassword" placeholder="Confirme sua senha" required>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
-                        <p class="text-center mt-3">Já tem uma conta? <a href="home.html">Entrar</a></p> <!-- Link para a tela com o mapa -->
+                        <p class="text-center mt-3">Já tem uma conta? <a href="usuario.html">Entrar</a></p> <!-- Link para a tela com o mapa -->
                     </form>
                 </div>
             </div>
