--- a/usuario.html
+++ b/usuario.html
@@ -71,6 +71,7 @@
             display: flex;
             justify-content: space-around;
             padding: 20px;
+            flex-wrap: wrap; /* Flexível para caber em diferentes tamanhos de tela */
         }
         .card-custom {
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -78,6 +79,7 @@
             width: 30%;
             text-align: center;
             padding: 20px;
+            margin: 10px;
             transition: transform 0.2s;
         }
         .card-custom:hover {
@@ -86,6 +88,17 @@
         .card-custom img {
             width: 100%;
             border-radius: 10px;
+        }
+
+        /* Ajustes para telas menores (celulares) */
+        @media (max-width: 768px) {
+            .card-container {
+                flex-direction: column; /* Cards empilhados em uma coluna */
+                align-items: center;    /* Centralizar os cards */
+            }
+            .card-custom {
+                width: 80%; /* Cards maiores em telas pequenas */
+            }
         }
     </style>
 </head>
