--- a/usuario.html
+++ b/usuario.html
@@ -131,7 +131,7 @@
         <input type="text" class="form-control" id="destination" placeholder="Informe o destino">
         <!-- Removido o botão "Usar Localização Atual" do segundo campo -->
     </div>
-    <button class="btn btn-primary" onclick="calculateRoute()">Calcular Rota</button>
+    <button class="btn btn-primary" onclick="calculateRoute()">Inciar Chamado</button>
 
     <!-- Exibir resultados da rota -->
     <div id="routeInfo" class="mt-3" style="display:none;">
